tests/snapshots/proof_error_snapshots__not_an_arrow.snap
---
source: tests/proof_error_snapshots.rs
expression: formatted
---
error chain:
  - command error
  - unification failed: not an arrow: Prop
fixture: tests/proof_errors/not_an_arrow.shari
