tests/snapshots/proof_error_snapshots__not_an_implication.snap
---
source: tests/proof_error_snapshots.rs
expression: formatted
---
error chain:
  - command error
  - unification failed: not an implication: «foo»
tests/proof_errors/not_an_implication.shari:6:52

lemma not_an_implication : foo → foo := assume foo, «foo» «foo»
                                                   ^^^^^^

fixture: tests/proof_errors/not_an_implication.shari
