tests/snapshots/proof_error_snapshots__overlap_missing_coherence.snap
---
source: tests/proof_error_snapshots.rs
expression: formatted
---
error chain:
  - command error
  - missing coherence proof: eq.{Prop} true p
fixture: tests/proof_errors/overlap_missing_coherence.shari
