tests/snapshots/proof_error_snapshots__type_argument_mismatch.snap
---
source: tests/proof_error_snapshots.rs
expression: formatted
---
error chain:
  - command error
  - unification failed: type argument mismatch: expected Prop, but got (Prop → Prop) → Prop → Prop
tests/proof_errors/type_argument_mismatch.shari:9:48

lemma type_argument_mismatch : foo := @general[λ (x : Prop → Prop), x]
                                               ^^^^^^^^^^^^^^^^^^^^^^

fixture: tests/proof_errors/type_argument_mismatch.shari
