tests/snapshots/proof_error_snapshots__type_hole_def_forall.snap
---
source: tests/proof_error_snapshots.rs
expression: formatted
---
error chain:
  - command error
  - type hole remains after elaboration
tests/proof_errors/type_hole_def_forall.shari:9:5

  ∀ x, foo
    ^

fixture: tests/proof_errors/type_hole_def_forall.shari
