tests/snapshots/proof_error_snapshots__type_hole_forall_nested.snap
---
source: tests/proof_error_snapshots.rs
expression: formatted
---
error chain:
  - command error
  - type hole remains after elaboration
tests/proof_errors/type_hole_forall_nested.shari:9:35

lemma type_hole_forall_nested : ∀ x y, foo :=
                                  ^

fixture: tests/proof_errors/type_hole_forall_nested.shari
